nav changes responsive

--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        
+        <header class="box__container">
+            <nav class="nav__bar">
+                <ul class="nav__link">
+                    <li>HOME</li>
+                    <li>SHOP</li>
+                    <li>ABOUT US</li>
+                    <li>BLOG</li>
+                </ul>
+                <h2>NATURAL</h2>
+                <div class="nav__user__link">
+                    <button>
+                        search product <img src="assets/Frame.png" alt="" />
+                    </button>
+                    <img src="assets/Frame 125.png" alt="" />
+                </div>
+                <div class="user__bar"><i class="fa-solid fa-bars"></i></div>
+            </nav>
+        </header>
     </body>
 </html>
