hero section changes

--- a/index.html
+++ b/index.html
@@ -38,5 +38,54 @@
                 <div class="user__bar"><i class="fa-solid fa-bars"></i></div>
             </nav>
         </header>
+        <main>
+            <!-- hero section -->
+            <div class="hero__section box__container">
+                <div class="hero__section__content">
+                    <div class="hero__section__information__text">
+                        <h5>Natural magic</h5>
+                        <h2>
+                            NATURAL BEAUTY <br />PRODUCTS FPR YOUR<br />
+                            HEALTHY SKIN
+                        </h2>
+                        <p>
+                            Unlock radiant skin effortlessly by harnessing the
+                            <br />potent benefits of natural ingredients for a
+                            healthy<br />
+                            glowing complexion
+                        </p>
+                        <div>
+                            <button class="start__shopping__button">
+                                Start shopping
+                                <img
+                                    src="assets/Frame 137.png"
+                                    alt="button__imgae"
+                                />
+                            </button>
+                        </div>
+                    </div>
+                    <div class="hero__section__information__footer">
+                        <div class="hero__section__user__review">
+                            <h4>Over 40.000</h4>
+                            <p>Satisfied Customers</p>
+                        </div>
+                        <div class="hero__section__user__review">
+                            <h4>4.8 starts</h4>
+                            <p>10,000+ reviewers</p>
+                        </div>
+                        <div class="hero__section__user__review">
+                            <h4>95%</h4>
+                            <p>User Report Healthier</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="hero__section__image">
+                    <img
+                        src="assets/Rectangle 30.png"
+                        alt="hero__section__image"
+                    />
+                </div>
+            </div>
+        </main>
     </body>
 </html>
