product range section complete

--- a/index.html
+++ b/index.html
@@ -86,6 +86,31 @@
                     />
                 </div>
             </div>
+            <!-- product range -->
+            <div class="box__container product__range">
+                <h2>OUR PRODUCT RANGE</h2>
+                <p>
+                    Discover our solution for achieving smoother, clearer, and
+                    more youthful-looking skin.<br> Experience the transformation
+                    you've been looking for.
+                </p>
+                <div class="product__sample">
+                    <img src="assets/Group 9.svg" alt="">
+                    <img src="assets/Group 8.svg" alt="">
+                    <img src="assets/Group 7.svg" alt="">
+
+                </div>
+                <div class="product__range__contant">
+                    <div class="product__range__contant__image">
+                        <img class="product__range__contant__image__position" src="assets/Rectangle 25.svg" alt="">
+                        <img class="product__range__contant__image__position__2nd" src="assets/Rectangle 24.svg" alt="">
+                    </div>
+                    <div class="product__range__contant__text__and__button">
+                        <p>Ready to elevate your skincare routine and achieve <br> your skin goals? Explore our curated selection of <br> products designed to meet your unique needs, and<br> enjoy fast shipping and hassle-free returns for a<br> seamless shopping experience.</p>
+                        <button>Explore More <img src="assets/Frame.svg" alt=""></button>
+                    </div>
+                    </div>
+                </div>
         </main>
     </body>
 </html>
