--- a/index.html
+++ b/index.html
@@ -91,26 +91,105 @@
                 <h2>OUR PRODUCT RANGE</h2>
                 <p>
                     Discover our solution for achieving smoother, clearer, and
-                    more youthful-looking skin.<br> Experience the transformation
-                    you've been looking for.
+                    more youthful-looking skin.<br />
+                    Experience the transformation you've been looking for.
                 </p>
                 <div class="product__sample">
-                    <img src="assets/Group 9.svg" alt="">
-                    <img src="assets/Group 8.svg" alt="">
-                    <img src="assets/Group 7.svg" alt="">
-
+                    <img src="assets/Group 9.svg" alt="" />
+                    <img src="assets/Group 8.svg" alt="" />
+                    <img src="assets/Group 7.svg" alt="" />
                 </div>
                 <div class="product__range__contant">
                     <div class="product__range__contant__image">
-                        <img class="product__range__contant__image__position" src="assets/Rectangle 25.svg" alt="">
-                        <img class="product__range__contant__image__position__2nd" src="assets/Rectangle 24.svg" alt="">
+                        <img
+                            class="product__range__contant__image__position"
+                            src="assets/Rectangle 25.svg"
+                            alt=""
+                        />
+                        <img
+                            class="product__range__contant__image__position__2nd"
+                            src="assets/Rectangle 24.svg"
+                            alt=""
+                        />
                     </div>
                     <div class="product__range__contant__text__and__button">
-                        <p>Ready to elevate your skincare routine and achieve <br> your skin goals? Explore our curated selection of <br> products designed to meet your unique needs, and<br> enjoy fast shipping and hassle-free returns for a<br> seamless shopping experience.</p>
-                        <button>Explore More <img src="assets/Frame.svg" alt=""></button>
-                    </div>
+                        <p>
+                            Ready to elevate your skincare routine and achieve
+                            <br />
+                            your skin goals? Explore our curated selection of
+                            <br />
+                            products designed to meet your unique needs, and<br />
+                            enjoy fast shipping and hassle-free returns for a<br />
+                            seamless shopping experience.
+                        </p>
+                        <button>
+                            Explore More <img src="assets/Frame.svg" alt="" />
+                        </button>
                     </div>
                 </div>
+            </div>
+            <!-- our best product -->
+            <section class="">
+                <div class="best__product box__container">
+                    <div class="product__item">
+                        <div class="button__emoji">
+                            <button>
+                                Add to cart
+                                <i class="fa-solid fa-basket-shopping"></i>
+                            </button>
+                            <img src="assets/Vector.svg" alt="" />
+                        </div>
+                        <div class="product__item__image">
+                            <img
+                                src="assets/4ff99efab813f10e389155136fb59904 1.svg"
+                                alt=""
+                            />
+                        </div>
+                        <div class="product__item__text">
+                            <p>Serum De Taint</p>
+                            <h4>$59.00</h4>
+                        </div>
+                    </div>
+                    <div class="product__item">
+                        <div class="button__emoji">
+                            <button>
+                                Add to cart
+                                <i class="fa-solid fa-basket-shopping"></i>
+                            </button>
+                            <img src="assets/Vector.svg" alt="" />
+                        </div>
+                        <div class="product__item__image">
+                            <img
+                                src="assets/b050459590629b6858d7816eae8c7ce4 1.svg"
+                                alt=""
+                            />
+                        </div>
+                        <div class="product__item__text">
+                            <p>Serum De Taint</p>
+                            <h4>$59.00</h4>
+                        </div>
+                    </div>
+                    <div class="product__item">
+                        <div class="button__emoji">
+                            <button>
+                                Add to cart
+                                <i class="fa-solid fa-basket-shopping"></i>
+                            </button>
+                            <img src="assets/Vector.svg" alt="" />
+                        </div>
+                        <div class="product__item__image">
+                            <img
+                                src="assets/9fa25bc1b8bb69e982cf9e101d9fa946 1.svg"
+                                alt=""
+                            />
+                        </div>
+                        <div class="product__item__text">
+                            <p>Serum De Taint</p>
+                            <h4>$59.00</h4>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
