--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
                     </div>
                 </div>
             </section>
+            <div>
+                <button>click it</button>
+            </div>
         </main>
     </body>
 </html>
