our product best price section complete

--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
             </div>
             <!-- our best product -->
             <section class="">
+                <div class="our__best__product__headline">
+                    <h2>OUR BEST PRODUCTS</h2>
+                    <p>Discover our solution for achieving smoother, clearer, and more youthful-looking skin. <br>Experience the transformation you've been looking for.</p>
+                </div>
                 <div class="best__product box__container">
                     <div class="product__item">
                         <div class="button__emoji">
@@ -190,9 +194,7 @@
                     </div>
                 </div>
             </section>
-            <div>
-                <button>click it</button>
-            </div>
+    
         </main>
     </body>
 </html>
