skin care routine header

--- a/index.html
+++ b/index.html
@@ -194,6 +194,15 @@
                     </div>
                 </div>
             </section>
+            <!-- skin care routine -->
+             <section class=" box__container">
+                <div class="skin__care__routine__header__section">
+                    <h3>CURIOUS ABOUT THE PERFECT <br>SKINCARE ROUTINE?</h3>
+                    <p>Valable to your skin - Our choice for perfect care</p>
+                </div>
+                
+
+             </section>
     
         </main>
     </body>
