skin care routine responsive complete

--- a/index.html
+++ b/index.html
@@ -200,7 +200,24 @@
                     <h3>CURIOUS ABOUT THE PERFECT <br>SKINCARE ROUTINE?</h3>
                     <p>Valable to your skin - Our choice for perfect care</p>
                 </div>
-                
+                <div class="skin__care__routine__hero__section">
+                    <div>
+                        <img src="assets/Frame 79.svg" alt="">
+                        <h5>Nourish your Skin with Our Luxurious </h5>
+                        <p>Skin care products help to effectively cleanse the skin <br>of daft grease makeup and other impurities</p>
+                    </div>
+                    <div class="skin__care__routine__hero__section__image__position__down">
+                        <img src="assets/Frame 80.svg" alt="">
+                        <h5>Your Skin with Our Powerful serums </h5>
+                        <p>Skin care products help to effectively cleanse the skin <br>of daft grease makeup and other impurities</p>
+                    </div>
+                    <div class="skin__care__routine__hero__section__image__position__up">
+                        <img src="assets/Frame 81.svg" alt="">
+                        <h5>Cap Totale Le Serum </h5>
+                        <p>Skin care products help to effectively cleanse the skin <br>of daft grease makeup and other impurities</p>
+                    </div>
+                </div>
+
 
              </section>
     
