success story from clicent hero section complete

--- a/index.html
+++ b/index.html
@@ -217,10 +217,15 @@
                         <p>Skin care products help to effectively cleanse the skin <br>of daft grease makeup and other impurities</p>
                     </div>
                 </div>
-
-
              </section>
-    
+             <!-- Success Stories from Our Clients ! -->
+              <section class="box__container">
+                <div class="success__stories__hero__section">
+                    <img src="assets/Frame 91.svg" alt="">
+                    <img src="assets/Frame 88.svg" alt="">
+                    <img src="assets/Frame 89.svg" alt="">  
+                </div>
+              </section>
         </main>
     </body>
 </html>
