--- a/index.html
+++ b/index.html
@@ -220,6 +220,11 @@
              </section>
              <!-- Success Stories from Our Clients ! -->
               <section class="box__container">
+                <div class="success__stories__header_section">
+                    <h5>Read the Success Stories from <br>Our Clients !</h5>
+                    <p>Discover firsthand account of transformative skincare journeys and glowing testimonials<br>about the remarkable changes experienced with our products</p>
+                </div>
+                
                 <div class="success__stories__hero__section">
                     <img src="assets/Frame 91.svg" alt="">
                     <img src="assets/Frame 88.svg" alt="">
