footer section complete

--- a/index.html
+++ b/index.html
@@ -224,13 +224,52 @@
                     <h5>Read the Success Stories from <br>Our Clients !</h5>
                     <p>Discover firsthand account of transformative skincare journeys and glowing testimonials<br>about the remarkable changes experienced with our products</p>
                 </div>
-                
+
                 <div class="success__stories__hero__section">
                     <img src="assets/Frame 91.svg" alt="">
                     <img src="assets/Frame 88.svg" alt="">
                     <img src="assets/Frame 89.svg" alt="">  
                 </div>
               </section>
+           
+              <footer>
+                <section class="footer__section">
+                    <div class="footer__content box__container">
+                        <div class="footer__social__text">
+                            <h5>NATURAL</h5>
+                            <p>Actor urns nun id curses id simper rises in <br>Hendrix gravid vi tore tongue Maurois</p>
+                            <img class="footer__social" src="assets/Frame 107.svg" alt="">
+                        </div>
+                        <div class="footer__content__text">
+                            <h6>Support</h6>
+                            <p>Help</p>
+                            <p>Contact</p>
+                            <p>Privacy & Policy </p>
+                            <p>Terms & conditions</p>
+                        </div>
+                        <div  class="footer__content__text">
+                            <h6>Page</h6>
+                            <p>Home</p>
+                            <p>Shop</p>
+                            <p>About us </p>
+                            <p>Blog</p>
+                        </div>
+                        <div  class="footer__content__text">
+                            <h6>Showroom Location</h6>
+                            <p>New York</p>     
+                            <p>Los Angeles </p>
+                            <p>Washington</p>
+                        </div>
+                        <div class="your__information">
+                            <h6>Newsletter</h6>
+                           <button class="email"> Enter Your Email</button>
+                            <button class="subscribe">Subscribe</button>
+                        </div>
+                    </div>
+
+                </section>
+
+              </footer>
         </main>
     </body>
 </html>
