--- a/index.html
+++ b/index.html
@@ -132,7 +132,11 @@
             <section class="">
                 <div class="our__best__product__headline">
                     <h2>OUR BEST PRODUCTS</h2>
-                    <p>Discover our solution for achieving smoother, clearer, and more youthful-looking skin. <br>Experience the transformation you've been looking for.</p>
+                    <p>
+                        Discover our solution for achieving smoother, clearer,
+                        and more youthful-looking skin. <br />Experience the
+                        transformation you've been looking for.
+                    </p>
                 </div>
                 <div class="best__product box__container">
                     <div class="product__item">
@@ -195,81 +199,106 @@
                 </div>
             </section>
             <!-- skin care routine -->
-             <section class=" box__container">
+            <section class="box__container">
                 <div class="skin__care__routine__header__section">
-                    <h3>CURIOUS ABOUT THE PERFECT <br>SKINCARE ROUTINE?</h3>
+                    <h3>CURIOUS ABOUT THE PERFECT <br />SKINCARE ROUTINE?</h3>
                     <p>Valable to your skin - Our choice for perfect care</p>
                 </div>
                 <div class="skin__care__routine__hero__section">
                     <div>
-                        <img src="assets/Frame 79.svg" alt="">
-                        <h5>Nourish your Skin with Our Luxurious </h5>
-                        <p>Skin care products help to effectively cleanse the skin <br>of daft grease makeup and other impurities</p>
+                        <img src="assets/Frame 79.svg" alt="" />
+                        <h5>Nourish your Skin with Our Luxurious</h5>
+                        <p>
+                            Skin care products help to effectively cleanse the
+                            skin <br />of daft grease makeup and other
+                            impurities
+                        </p>
                     </div>
-                    <div class="skin__care__routine__hero__section__image__position__down">
-                        <img src="assets/Frame 80.svg" alt="">
-                        <h5>Your Skin with Our Powerful serums </h5>
-                        <p>Skin care products help to effectively cleanse the skin <br>of daft grease makeup and other impurities</p>
+                    <div
+                        class="skin__care__routine__hero__section__image__position__down"
+                    >
+                        <img src="assets/Frame 80.svg" alt="" />
+                        <h5>Your Skin with Our Powerful serums</h5>
+                        <p>
+                            Skin care products help to effectively cleanse the
+                            skin <br />of daft grease makeup and other
+                            impurities
+                        </p>
                     </div>
-                    <div class="skin__care__routine__hero__section__image__position__up">
-                        <img src="assets/Frame 81.svg" alt="">
-                        <h5>Cap Totale Le Serum </h5>
-                        <p>Skin care products help to effectively cleanse the skin <br>of daft grease makeup and other impurities</p>
+                    <div
+                        class="skin__care__routine__hero__section__image__position__up"
+                    >
+                        <img src="assets/Frame 81.svg" alt="" />
+                        <h5>Cap Totale Le Serum</h5>
+                        <p>
+                            Skin care products help to effectively cleanse the
+                            skin <br />of daft grease makeup and other
+                            impurities
+                        </p>
                     </div>
                 </div>
-             </section>
-             <!-- Success Stories from Our Clients ! -->
-              <section class="box__container">
+            </section>
+            <!-- Success Stories from Our Clients ! -->
+            <section class="box__container">
                 <div class="success__stories__header_section">
-                    <h5>Read the Success Stories from <br>Our Clients !</h5>
-                    <p>Discover firsthand account of transformative skincare journeys and glowing testimonials<br>about the remarkable changes experienced with our products</p>
+                    <h5>Read the Success Stories from <br />Our Clients !</h5>
+                    <p>
+                        Discover firsthand account of transformative skincare
+                        journeys and glowing testimonials<br />about the
+                        remarkable changes experienced with our products
+                    </p>
                 </div>
 
                 <div class="success__stories__hero__section">
-                    <img src="assets/Frame 91.svg" alt="">
-                    <img src="assets/Frame 88.svg" alt="">
-                    <img src="assets/Frame 89.svg" alt="">  
+                    <img src="assets/Frame 91.svg" alt="" />
+                    <img src="assets/Frame 88.svg" alt="" />
+                    <img src="assets/Frame 89.svg" alt="" />
                 </div>
-              </section>
-           
-              <footer>
+            </section>
+
+            <footer>
                 <section class="footer__section">
                     <div class="footer__content box__container">
                         <div class="footer__social__text">
                             <h5>NATURAL</h5>
-                            <p>Actor urns nun id curses id simper rises in <br>Hendrix gravid vi tore tongue Maurois</p>
-                            <img class="footer__social" src="assets/Frame 107.svg" alt="">
+                            <p>
+                                Actor urns nun id curses id simper rises in
+                                <br />Hendrix gravid vi tore tongue Maurois
+                            </p>
+                            <img
+                                class="footer__social"
+                                src="assets/Frame 107.svg"
+                                alt=""
+                            />
                         </div>
                         <div class="footer__content__text">
                             <h6>Support</h6>
                             <p>Help</p>
                             <p>Contact</p>
-                            <p>Privacy & Policy </p>
+                            <p>Privacy & Policy</p>
                             <p>Terms & conditions</p>
                         </div>
-                        <div  class="footer__content__text">
+                        <div class="footer__content__text">
                             <h6>Page</h6>
                             <p>Home</p>
                             <p>Shop</p>
-                            <p>About us </p>
+                            <p>About us</p>
                             <p>Blog</p>
                         </div>
-                        <div  class="footer__content__text">
+                        <div class="footer__content__text">
                             <h6>Showroom Location</h6>
-                            <p>New York</p>     
-                            <p>Los Angeles </p>
+                            <p>New York</p>
+                            <p>Los Angeles</p>
                             <p>Washington</p>
                         </div>
                         <div class="your__information">
                             <h6>Newsletter</h6>
-                           <button class="email"> Enter Your Email</button>
+                            <button class="email">Enter Your Email</button>
                             <button class="subscribe">Subscribe</button>
                         </div>
                     </div>
-
                 </section>
-
-              </footer>
+            </footer>
         </main>
     </body>
 </html>
